# OpenGL_training

./: .gitignore  LICENSE  README.md
01 - simple_triangle/: CMakeLists.txt  main.cpp
01 - simple_triangle/shaders/: basic.frag  basic.vert
02 - simple_triangle_organised/: CMakeLists.txt  main.cpp
02 - simple_triangle_organised/graphics/: Shader.cpp  VBO.cpp
02 - simple_triangle_organised/shaders/: basic.vert
03 - simple_texture/: CMakeLists.txt  main.cpp
03 - simple_texture/graphics/: Texture.h  VBO.h
03 - simple_texture/shaders/: basic.vert
04 - rotating_cube/: CMakeLists.txt  main.cpp
04 - rotating_cube/graphics/: EBO.cpp  EBO.h  Shader.h  Texture.cpp
04 - rotating_cube/shaders/: basic.vert
05 - compute_shader/: CMakeLists.txt  main.cpp
05 - compute_shader/graphics/: Texture.h
05 - compute_shader/shaders/: compute.comp
06 - slime_simulation/: CMakeLists.txt  main.cpp
06 - slime_simulation/graphics/: Texture.cpp
06 - slime_simulation/shaders/: basic.vert  diffuse.comp  slime.comp
07 - slime_simulation_organised/: CMakeLists.txt  main.cpp
07 - slime_simulation_organised/shaders/: diffuse.comp
07 - slime_simulation_organised/utils/: utils.cpp  utils.h
08 - camera_movement/: CMakeLists.txt  main.cpp
08 - camera_movement/openGL/: Camera.cpp  Camera.h  Shader.cpp  VAO.h
08 - camera_movement/shaders/: basic.frag  basic.vert
09 - light/: CMakeLists.txt  main.cpp
09 - light/openGL/: CShaderProgram.cpp  Texture.cpp  Texture.h
09 - light/shaders/: basic.frag  basic.vert  light.vert
09 - light/utils/: utils.cpp  utils.h
10 - mesh/: CMakeLists.txt  main.cpp
10 - mesh/openGL/: Camera.cpp  EBO.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  Texture.cpp  Texture.h  VAO.cpp
10 - mesh/shaders/: basic.frag  basic.vert
11 - depth_fog/: CMakeLists.txt  main.cpp
11 - depth_fog/openGL/: CShaderProgram.h  Model.h  VBO.h
11 - depth_fog/shaders/: basic.frag  basic.vert  light.frag
12 - outlining/: CMakeLists.txt  main.cpp
12 - outlining/openGL/: Camera.h  Texture.cpp
12 - outlining/shaders/: basic.frag  basic.vert  (+2 more)
13 - frame_buffer/: CMakeLists.txt  main.cpp
14 - geometry_shader/: CMakeLists.txt  main.cpp
(+22 files in other folders)
